<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDataActivity"
    android:background="@drawable/cutted_details_background_garage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:id="@+id/man_model_LT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="#D1D1D1"
                android:id="@+id/item_manufactureTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/manufacture" />

            <TextView
                android:textSize="18sp"
                android:textColor="#9E9E9E"
                android:id="@+id/item_modelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/model" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relLT"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/man_model_LT">
            <LinearLayout
                android:id="@+id/labelsLT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right">

                <TextView
                    android:textStyle="bold"
                    android:textColor="#BCBCBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/generation" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="#BCBCBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/produced_from" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="#BCBCBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/produced_to" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="#BCBCBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/engine_capacity" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="#BCBCBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/maximum_speed" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="#BCBCBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time_to_100_km_h" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/labelsLT"
                android:orientation="vertical">

                <TextView
                    android:textColor="#BCBCBC"
                    android:id="@+id/generationTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/generationtext" />

                <TextView
                    android:textColor="#BCBCBC"
                    android:id="@+id/yearFromTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/year_from" />

                <TextView
                    android:textColor="#BCBCBC"
                    android:id="@+id/yearToTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/year_to" />

                <TextView
                    android:textColor="#BCBCBC"
                    android:id="@+id/engCapTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/engsizetext" />

                <TextView
                    android:textColor="#BCBCBC"
                    android:id="@+id/maxSpeedTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/maxspeedtext" />

                <TextView
                    android:textColor="#BCBCBC"
                    android:id="@+id/timeTo100TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/timeto100text" />
            </LinearLayout>

        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/relLT"
            android:id="@+id/carRecycleView">

        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>


<!--    <GridLayout-->
<!--        android:layout_weight="3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:columnCount="2"-->
<!--        android:rowCount="2"-->
<!--       android:background="@drawable/tile_background">-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_margin="10dp"-->
<!--            android:elevation="4dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_width="0dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:weightSum="3"-->
<!--                android:orientation="vertical">-->
<!--                <ImageView-->
<!--                    android:src="@drawable/mercedes_klasa_g"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"/>-->
<!--            </LinearLayout>-->

<!--        </androidx.cardview.widget.CardView>-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_margin="10dp"-->
<!--            android:elevation="4dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_width="0dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:weightSum="3"-->
<!--                android:orientation="vertical">-->
<!--                <ImageView-->
<!--                    android:src="@drawable/mercedes_klasa_g"-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="100dp"/>-->
<!--            </LinearLayout>-->

<!--        </androidx.cardview.widget.CardView>-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_margin="10dp"-->
<!--            android:elevation="4dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_width="0dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:weightSum="3"-->
<!--                android:orientation="vertical">-->
<!--                <ImageView-->
<!--                    android:src="@drawable/mercedes_klasa_g"-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="100dp"/>-->
<!--            </LinearLayout>-->

<!--        </androidx.cardview.widget.CardView>-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_margin="10dp"-->
<!--            android:elevation="4dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_width="0dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:weightSum="3"-->
<!--                android:orientation="vertical">-->
<!--                <ImageView-->
<!--                    android:src="@drawable/mercedes_klasa_g"-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="100dp"/>-->
<!--            </LinearLayout>-->

<!--        </androidx.cardview.widget.CardView>-->
<!--    </GridLayout>-->
</LinearLayout>