<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/modelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mainIMG"
            android:layout_marginStart="151dp"
            android:layout_marginTop="-43dp"
            android:layout_marginBottom="35dp"
            android:layout_toEndOf="@+id/mainIMG"
            android:text="@string/model" />

        <ImageView
            android:id="@+id/mainIMG"
            android:layout_width="96dp"
            android:layout_height="72dp" />

        <TextView
            android:id="@+id/manufactureTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="148dp"
            android:layout_toEndOf="@+id/mainIMG"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/manufacture"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/typeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mainIMG"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-27dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="54dp"
            android:text="@string/type" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>